operational c and s band running

--- a/cp2-retrieval.ipynb
+++ b/cp2-retrieval.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "import pyart\n",
     "\n",
-    "import common\n",
+    "import cp2_common as common\n",
     "import attenuation\n",
-    "import rainrate\n"
+    "import rainrate"
    ]
   },
   {
