moved to KDtree NN

--- a/retrieval/op_qsub.ipynb
+++ b/retrieval/op_qsub.ipynb
@@ -2,22 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_71_2018_m11_m11.pbs\n",
-      "b'19184266.gadi-pbs\\n'\n",
-      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_71_2018_m12_m12.pbs\n",
-      "b'19184270.gadi-pbs\\n'\n",
-      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_66_2018_m11_m11.pbs\n",
-      "b'19184271.gadi-pbs\\n'\n",
-      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_66_2018_m12_m12.pbs\n",
-      "b'19184272.gadi-pbs\\n'\n",
-      "finished qsub generate for  4 jobs\n"
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_31_2020_m4_m4.pbs\n",
+      "b'22104207.gadi-pbs\\n'\n",
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_31_2020_m5_m5.pbs\n",
+      "b'22104209.gadi-pbs\\n'\n",
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_32_2020_m4_m4.pbs\n",
+      "b'22104210.gadi-pbs\\n'\n",
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_32_2020_m5_m5.pbs\n",
+      "b'22104211.gadi-pbs\\n'\n",
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_95_2020_m4_m4.pbs\n",
+      "b'22104212.gadi-pbs\\n'\n",
+      "running /home/548/jss548/dev/tmp/qsub_dp_rain/dp_95_2020_m5_m5.pbs\n",
+      "b'22104213.gadi-pbs\\n'\n",
+      "finished qsub generate for  6 jobs\n"
      ]
     }
    ],
@@ -37,7 +41,7 @@
     "    #PBS -l wd\n",
     "    #PBS -l ncpus={cpu}\n",
     "    #PBS -l jobfs=150GB\n",
-    "    #PBS -m abe\n",
+    "    #PBS -m a\n",
     "    #PBS -l storage=gdata/rq0+gdata/kl02+gdata/en0+gdata/lb4\n",
     "    export PATH=\"/g/data/en0/jss548/miniconda3:$PATH\"\n",
     "    source activate radar-dev\n",
@@ -56,13 +60,13 @@
     "ncpu         = 16\n",
     "mem          = 128\n",
     "walltime     = 24\n",
-    "start_year   = 2018\n",
-    "end_year     = 2018\n",
+    "start_year   = 2020\n",
+    "end_year     = 2020\n",
     "rid_list     = [31,32,95]#,71,66]\n",
     "run_flag     = True\n",
     "qmode        = 'normal'\n",
     "#month_list   = [[1,3],[4,6],[7,9],[10,12]] #quaterly\n",
-    "month_list   = [[11,11],[12,12]]#[[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7],[8,8],[9,9],[10,10],[11,11],[12,12]] #one month\n",
+    "month_list   = [[4,4],[5,5]]#[[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7],[8,8],[9,9],[10,10],[11,11],[12,12]] #one month\n",
     "\n",
     "#S band DP test period is for Nov 2018 to March 2019\n",
     "#C band DP test period is for April 2020 to May 2020\n",
@@ -108,7 +112,7 @@
     "                print('running ' + fname)\n",
     "                print(output)\n",
     "\n",
-    "print('finished qsub generate for ',str(count), 'jobs')\n"
+    "print('finished qsub generate for ',str(count), 'jobs')"
    ]
   },
   {
