C band version working

--- a/verification/pipeline.ipynb
+++ b/verification/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "NCPU = 15\n",
-    "radar_id = 66 #2,64,66,71,31,32,95\n",
-    "date_start_str = '20181101'\n",
-    "date_end_str = '20190331'\n",
+    "radar_id = 95 #2,64,66,71,31,32,95\n",
+    "date_start_str = '20200401'\n",
+    "date_end_str = '20200531'\n",
     "dp_path = '/g/data/rq0/admin/dprain-verify-latest/rfgrid'\n",
     "rf3_path = '/g/data/rq0/admin/dprain-verify-orignal/rf3_rrate'\n",
     "of_path = '/g/data/rq0/admin/dprain-verify-orignal/optflow'\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,201 +387,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processed 2018-11-09 00:00:00\n",
-      "processed 2018-11-06 00:00:00\n",
-      "processed 2018-11-04 00:00:00\n",
-      "processed 2018-11-02 00:00:00\n",
-      "processed 2018-11-05 00:00:00\n",
-      "processed 2018-11-14 00:00:00\n",
-      "processed 2018-11-07 00:00:00\n",
-      "processed 2018-11-11 00:00:00\n",
-      "processed 2018-11-03 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181101/66_20181101_0224*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181108/66_20181108_0600*.prcp-rrate.nc\n",
-      "processed 2018-11-08 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181101/66_20181101_0424*.prcp-rrate.nc\n",
-      "processed 2018-11-13 00:00:00\n",
-      "processed 2018-11-12 00:00:00\n",
-      "processed 2018-11-01 00:00:00\n",
-      "processed 2018-11-15 00:00:00\n",
-      "processed 2018-11-10 00:00:00\n",
-      "processed: 9.93\n",
-      "processed 2018-11-25 00:00:00\n",
-      "processed 2018-11-27 00:00:00\n",
-      "processed 2018-11-29 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181122/66_20181122_2342*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181126/66_20181126_0330*.prcp-rrate.nc\n",
-      "no files found on:no valid data \n",
-      "/g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181124/66_20181124_0512*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181121/66_20181121_0000*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181120/66_20181120_2224*.prcp-rrate.nc\n",
-      "processed 2018-11-26 00:00:00\n",
-      "processed 2018-11-20 00:00:00\n",
-      "processed 2018-11-24 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181123/66_20181123_0112*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181121/66_20181121_0000*.prcp-rrate.nc\n",
-      "processed 2018-11-16 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181119/66_20181119_0454*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181122/66_20181122_2354*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181123/66_20181123_0212*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181121/66_20181121_0042*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181119/66_20181119_1154*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181123/66_20181123_0224*.prcp-rrate.nc\n",
-      "processed 2018-11-19 00:00:00\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181123/66_20181123_0242*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181123/66_20181123_0324*.prcp-rrate.nc\n",
-      "processed 2018-11-23 00:00:00\n",
-      "processed 2018-11-30 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-11-18 00:00:00\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181117/66_20181117_0600*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181117/66_20181117_0600*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181128/66_20181128_0418*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181128/66_20181128_0418*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-11-22 00:00:00\n",
-      "processed 2018-11-28 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-11-21 00:00:00\n",
-      "processed 2018-11-17 00:00:00\n",
-      "processed: 19.87\n",
-      "processedprocessed  2018-12-03 00:00:002018-12-11 00:00:00\n",
+      "processedprocessed  2020-04-06 00:00:002020-04-03 00:00:00\n",
       "\n",
-      "processed 2018-12-10 00:00:00\n",
-      "processed 2018-12-01 00:00:00\n",
-      "processed 2018-12-02 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-12-07 00:00:00\n",
-      "processed 2018-12-09 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-12-12 00:00:00\n",
-      "processed 2018-12-06 00:00:00\n",
-      "processed 2018-12-08 00:00:00\n",
-      "processed 2018-12-13 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-12-05 00:00:00\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181214/66_20181214_1618*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181214/66_20181214_1618*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "processed 2018-12-15 00:00:00\n",
-      "processed 2018-12-04 00:00:00\n",
-      "processed 2018-12-14 00:00:00\n",
-      "processed: 29.8\n",
-      "processedprocessed  2018-12-26 00:00:002018-12-23 00:00:00\n",
+      "processed 2020-04-14 00:00:00\n",
+      "processed 2020-04-15 00:00:00\n",
+      "processed 2020-04-04 00:00:00\n",
+      "processed 2020-04-08 00:00:00\n",
+      "processed 2020-04-12 00:00:00\n",
+      "processed 2020-04-11 00:00:00\n",
+      "processed 2020-04-01 00:00:00\n",
+      "processed 2020-04-05 00:00:00\n",
+      "processed 2020-04-02 00:00:00\n",
+      "processed 2020-04-07 00:00:00\n",
+      "processed 2020-04-13 00:00:00\n",
+      "processed 2020-04-09 00:00:00\n",
+      "processed 2020-04-10 00:00:00\n",
+      "processed: 24.59\n",
+      "processed 2020-04-18 00:00:00\n",
+      "processed 2020-04-27 00:00:00\n",
+      "processed 2020-04-29 00:00:00\n",
+      "processed 2020-04-20 00:00:00\n",
+      "processed 2020-04-23 00:00:00\n",
+      "processed 2020-04-26 00:00:00\n",
+      "processed 2020-04-21 00:00:00\n",
+      "processed 2020-04-17 00:00:00\n",
+      "processed 2020-04-16 00:00:00\n",
+      "processed 2020-04-22 00:00:00\n",
+      "processed 2020-04-30 00:00:00\n",
+      "processed 2020-04-19 00:00:00\n",
+      "processed 2020-04-24 00:00:00\n",
+      "processed 2020-04-25 00:00:00\n",
+      "processed 2020-04-28 00:00:00\n",
+      "processed: 49.18\n",
+      "processed 2020-05-10 00:00:00\n",
+      "processed 2020-05-02 00:00:00\n",
+      "processed 2020-05-04 00:00:00\n",
+      "processed 2020-05-14 00:00:00\n",
+      "processed 2020-05-03 00:00:00\n",
+      "processed 2020-05-07 00:00:00\n",
+      "processed 2020-05-09 00:00:00\n",
+      "processed 2020-05-15 00:00:00\n",
+      "processed 2020-05-13 00:00:00\n",
+      "processed 2020-05-05 00:00:00\n",
+      "processed 2020-05-11 00:00:00\n",
+      "processed 2020-05-06 00:00:00\n",
+      "processed 2020-05-08 00:00:00\n",
+      "processed 2020-05-12 00:00:00\n",
+      "processed 2020-05-01 00:00:00\n",
+      "processed: 73.77\n",
+      "processed processed2020-05-17 00:00:00 2020-05-28 00:00:00\n",
       "\n",
-      "processedprocessed  2018-12-28 00:00:002018-12-27 00:00:00\n",
-      "\n",
-      "processed 2018-12-24 00:00:00\n",
-      "processed 2018-12-30 00:00:00\n",
-      "processed 2018-12-25 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181219/66_20181219_2354*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0618*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181216/66_20181216_2354*.prcp-rrate.nc\n",
-      "processed 2018-12-19 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0624*.prcp-rrate.nc\n",
+      "processed 2020-05-25 00:00:00\n",
+      "processed 2020-05-27 00:00:00\n",
+      "processed 2020-05-24 00:00:00\n",
+      "processed 2020-05-22 00:00:00\n",
+      "processed 2020-05-29 00:00:00\n",
+      "processed 2020-05-26 00:00:00\n",
+      "processed 2020-05-30 00:00:00\n",
+      "processed 2020-05-16 00:00:00\n",
+      "processed 2020-05-21 00:00:00\n",
+      "processed 2020-05-18 00:00:00\n",
+      "processed 2020-05-23 00:00:00\n",
       "no valid data\n",
-      "processed 2018-12-20 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181216/66_20181216_2354*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0648*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0700*.prcp-rrate.nc\n",
-      "processedno valid data \n",
-      "2018-12-29 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0718*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181221/66_20181221_0730*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0454*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0454*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0530*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0530*.prcp-rrate.nc\n",
-      "processed 2018-12-18 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0700*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0700*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0718*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181216/66_20181216_0254*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0730*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181216/66_20181216_0254*.prcp-rrate.nc\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0742*.prcp-rrate.nc\n",
-      "no valid data\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20181222/66_20181222_0754*.prcp-rrate.nc\n",
-      "processed 2018-12-22 00:00:00\n",
-      "no valid data\n",
-      "processed 2018-12-21 00:00:00\n",
-      "processed 2018-12-17 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2018-12-16 00:00:00\n",
-      "processed: 39.74\n",
-      "processed processed2019-01-01 00:00:00\n",
-      " 2019-01-11 00:00:00\n",
-      "processed 2019-01-05 00:00:00\n",
-      "processed 2019-01-13 00:00:00\n",
-      "processedprocessed  2019-01-12 00:00:002019-01-10 00:00:00\n",
-      "\n",
-      "processed 2019-01-04 00:00:00\n",
-      "processed 2018-12-31 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20190114/66_20190114_0200*.prcp-rrate.nc\n",
-      "processed 2019-01-07 00:00:00\n",
-      "no files found on: /g/data/rq0/admin/dprain-verify-latest/rfgrid/66/20190114/66_20190114_0224*.prcp-rrate.nc\n",
-      "processed 2019-01-14 00:00:00\n",
-      "no valid data\n",
-      "processed 2019-01-09 00:00:00\n",
-      "no valid data\n",
-      "processed 2019-01-08 00:00:00\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "no valid data\n",
-      "processed 2019-01-02 00:00:00\n",
-      "processed 2019-01-06 00:00:00\n",
-      "processed 2019-01-03 00:00:00\n",
-      "processed: 49.67\n",
-      "processed 2019-01-16 00:00:00processed\n",
-      " processed2019-01-21 00:00:00 2019-01-17 00:00:00\n",
-      "\n",
-      "processed 2019-01-27 00:00:00\n",
-      "processed 2019-01-26 00:00:00\n",
-      "processed 2019-01-19 00:00:00\n",
-      "processed 2019-01-25 00:00:00\n",
-      "processedprocessed 2019-01-18 00:00:00"
+      "processed 2020-05-20 00:00:00\n",
+      "processed 2020-05-19 00:00:00\n",
+      "processed: 98.36\n",
+      "processed 2020-05-31 00:00:00\n",
+      "processed: 122.95\n"
      ]
     }
    ],
